WIP bundle with bun

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Smoothly search & replace in files from CLI.",
 	"author": "Mathias Rangel Wulff",
 	"license": "MIT",
+	"type": "module",
 	"main": "src/engine.js",
 	"repository": {
 		"type": "git",
@@ -18,9 +19,8 @@
 		"postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
 		"version": "yarn build-minify",
 		"build": "yarn build-only",
-		"build-only": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
-		"build-minify": "yarn build && yarn minify",
-		"minify": "echo '#!/usr/bin/env node' > bin/rexreplace.cli.min.js && npx google-closure-compiler --js=bin/rexreplace.cli.js >> bin/rexreplace.cli.min.js",
+		"build-only": "bun build --target node src/env/node.ts --outfile bin/rexreplace.cli.js",
+		"build-minify": "bun build --target node src/env/node.ts --outfile bin/rexreplace.cli.js --minify",
 		"prebuild": "rm -fr bin && yarn format",
 		"test-js": "echo todo: async mocha",
 		"test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
