--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
 		"version": "yarn build-minify",
 		"build": "yarn build-only",
-		"build-only": "bun build --target node src/env/node.ts --outfile bin/rexreplace.cli.js",
-		"build-minify": "bun build --target node src/env/node.ts --outfile bin/rexreplace.cli.js --minify",
+		"build-only": "bun build --target bun src/env/bun.ts --outfile bin/rexreplace.cli.js",
+		"build-minify": "bun build --target bun src/env/bun.ts --outfile bin/rexreplace.cli.min.js --minify",
 		"prebuild": "rm -fr bin && yarn format",
 		"test-js": "echo todo: async mocha",
 		"test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
@@ -54,9 +54,9 @@
 		"@types/yargs": "^17.0.24",
 		"assert": "^2.0.0",
 		"bun-types": "^1.0.2",
-		"magic-string": "0.30.2",
+		"magic-string": "0.30.3",
 		"mocha": "10.2.0",
-		"prettier": "3.0.0",
+		"prettier": "3.0.3",
 		"rollup": "2.79.1",
 		"rollup-plugin-closure-compiler-js": "^1.0.6",
 		"rollup-plugin-filesize": "9.1.2",
@@ -64,7 +64,7 @@
 		"rollup-plugin-preserve-shebang": "1.0.1",
 		"rollup-plugin-progress": "1.1.2",
 		"rollup-plugin-typescript3": "1.1.3",
-		"typescript": "5.1.6",
+		"typescript": "5.2.2",
 		"version-bump-prompt": "6.1.0",
 		"yarn": "1.22.19"
 	},
@@ -79,7 +79,7 @@
 		"fast-glob": "^3.3.1",
 		"fs-extra": "^11.1.1",
 		"globs": "0.1.4",
-		"yargs": "16.2.0"
+		"yargs": "17.7.2"
 	},
 	"prettier": {
 		"useTabs": true,
