--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
 		"url": "git+https://github.com/mathiasrw/rexreplace.git"
 	},
 	"bin": {
-		"rr": "bin/rexreplace.cli.js",
-		"rexreplace": "dist/env/node.js"
+		"rr": "src/env/bun.ts",
+		"rexreplace_node": "bin/rexreplace.cli.js",
+		"rexreplace": "src/env/bun.ts"
 	},
 	"scripts": {
 		"test": "yarn build && yarn test-cli && yarn test-js",
 		"postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
 		"version": "yarn build-minify",
 		"build": "yarn build-only",
-		"build-only": "swc src/ -d bin/ && bun build --target node bin/env/node.js --outfile bin/rexreplace.cli.js",
-		"build-minify": "bun build --target node bin/env/node.js --outfile bin/rexreplace.cli.min.js --minify",
-		"prebuild": "rm -fr bin && yarn format",
+		"build-only": "swc src/ -d dist/ && bun build --target node src/env/node.ts --outfile bin/rexreplace.cli.js ",
+		"build-minify": "bun build --target node src/env/node.ts --outfile bin/rexreplace.cli.min.js --minify",
+		"prebuild": "rm -fr bin # && yarn format",
 		"test-js": "echo todo: async mocha",
 		"test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
 		"test-cli": "npm uninstall -g rexreplace && npm -g install ./ && yarn test-cli-only",
@@ -66,6 +67,7 @@
 		"rollup-plugin-preserve-shebang": "1.0.1",
 		"rollup-plugin-progress": "1.1.2",
 		"rollup-plugin-typescript3": "1.1.3",
+		"ts-node": "^10.9.1",
 		"typescript": "5.2.2",
 		"version-bump-prompt": "6.1.0",
 		"yarn": "1.22.19"
