--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rexreplace",
   "version": "7.1.3",
-  "description": "Smoothly search & replace in files from CLI.",
+  "description": "Smooth search & replace across files from the CLI | 🔎 🔃 📄",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
   "main": "src/engine.js",
