--- a/package.json
+++ b/package.json
@@ -1,93 +1,91 @@
 {
-  "name": "rexreplace",
-  "version": "7.1.3",
-  "description": "Smooth search & replace across files from the CLI | 🔎 🔃 📄",
-  "author": "Mathias Rangel Wulff",
-  "license": "MIT",
-  "main": "src/engine.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mathiasrw/rexreplace.git"
-  },
-  "bin": {
-    "rr": "bin/rexreplace.cli.js",
-    "rexreplace": "bin/rexreplace.cli.js"
-  },
-  "scripts": {
-    "test": "yarn build && yarn test-cli && yarn test-js",
-    "postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
-    "version": "yarn build-minify",
-    "build": "yarn build-only",
-    "build-only": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
-    "build-minify": "yarn build && yarn minify",
-    "minify": "echo '#!/usr/bin/env node' > bin/rexreplace.cli.min.js && npx google-closure-compiler --js=bin/rexreplace.cli.js >> bin/rexreplace.cli.min.js",
-    "prebuild": "rm -fr bin && yarn format",
-    "test-js": "echo todo: async mocha",
-    "test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
-    "test-cli": "npm uninstall -g rexreplace && npm -g install ./ && yarn test-cli-only",
-    "test-cli-only": "bash test/cli/run.sh",
-    "test-speed": "bash test/speed/run.sh",
-    "prepublishOnly": "yarn is-git-clean && git fetch && git rebase origin/main && yarn test-minify && yarn load-options && yarn bump",
-    "postpublish": "git push --tag && git push && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
-    "load-options": "rr -h | rr 'Options:(.+)Examples:' _ -ms | rr '\\n {26,}|\\n\\n *' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----).+?(## Good to know)' '€1 + nl + pipe + nl + nl + €2' readme.md -jsT",
-    "test-format": "yarn prettier --list-different || (echo 'Please correct file formatting using `yarn format` and try again.' && exit 1)",
-    "format": "yarn prettier --write",
-    "prettier": "prettier '{src,test}/**/*.{scss,css,js,ts}'",
-    "bump": "bump --tag 'v%s' --all",
-    "is-git-clean": "(git diff --quiet --exit-code --cached && git diff --quiet --exit-code) || (echo Please commit or stash changes && exit 1)"
-  },
-  "keywords": [
-    "search",
-    "find",
-    "replace",
-    "regex",
-    "regexp",
-    "regular expression",
-    "sed"
-  ],
-  "devDependencies": {
-    "@rollup/plugin-buble": "1.0.3",
-    "@rollup/plugin-commonjs": "26.0.1",
-    "@rollup/plugin-node-resolve": "15.2.3",
-    "@rollup/plugin-replace": "5.0.7",
-    "@types/node": "20.8.3",
-    "assert": "^2.0.0",
-    "magic-string": "0.30.11",
-    "mocha": "10.7.3",
-    "prettier": "3.3.3",
-    "rollup": "2.79.1",
-    "rollup-plugin-closure-compiler-js": "^1.0.6",
-    "rollup-plugin-filesize": "9.1.2",
-    "rollup-plugin-hashbang": "3.0.0",
-    "rollup-plugin-preserve-shebang": "1.0.1",
-    "rollup-plugin-progress": "1.1.2",
-    "rollup-plugin-typescript3": "3.0.5",
-    "typescript": "5.5.4",
-    "version-bump-prompt": "6.1.0",
-    "yarn": "1.22.22"
-  },
-  "resolutions": {
-    "ansi-regex": "5.0.1",
-    "tough-cookie": "4.1.4"
-  },
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "fs-extra": "^11.1.1",
-    "globs": "0.1.4",
-    "yargs": "16.2.0"
-  },
-  "prettier": {
-    "useTabs": true,
-    "printWidth": 100,
-    "singleQuote": true,
-    "arrowParens": "always",
-    "bracketSpacing": false,
-    "trailingComma": "es5"
-  },
-  "bugs": {
-    "url": "https://github.com/mathiasrw/rexreplace/issues"
-  },
-  "homepage": "https://github.com/mathiasrw/rexreplace#readme"
+	"name": "rexreplace",
+	"version": "7.1.4",
+	"description": "Smooth search & replace across files from the CLI | 🔎 🔃 📄",
+	"author": "Mathias Rangel Wulff",
+	"license": "MIT",
+	"main": "src/engine.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/mathiasrw/rexreplace.git"
+	},
+	"bin": {
+		"rr": "bin/rexreplace.cli.js",
+		"rexreplace": "bin/rexreplace.cli.js"
+	},
+	"scripts": {
+		"test": "yarn build && yarn test-cli && yarn test-js",
+		"postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
+		"version": "yarn build-minify",
+		"build": "yarn build-only",
+		"build-only": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
+		"build-minify": "yarn build && yarn minify",
+		"minify": "echo '#!/usr/bin/env node' > bin/rexreplace.cli.min.js && npx google-closure-compiler --js=bin/rexreplace.cli.js >> bin/rexreplace.cli.min.js",
+		"prebuild": "rm -fr bin && yarn format",
+		"test-js": "echo todo: async mocha",
+		"test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
+		"test-cli": "npm uninstall -g rexreplace && npm -g install ./ && yarn test-cli-only",
+		"test-cli-only": "bash test/cli/run.sh",
+		"test-speed": "bash test/speed/run.sh",
+		"prepublishOnly": "yarn is-git-clean && git fetch && git rebase origin/main && yarn test-minify && yarn load-options && yarn bump",
+		"postpublish": "git push --tag && git push && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
+		"load-options": "rr -h | rr 'Options:(.+)Examples:' _ -ms | rr '\\n {26,}|\\n\\n *' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----).+?(## Good to know)' '€1 + nl + pipe + nl + nl + €2' readme.md -jsT",
+		"test-format": "yarn prettier --list-different || (echo 'Please correct file formatting using `yarn format` and try again.' && exit 1)",
+		"format": "yarn prettier --write",
+		"prettier": "prettier '{src,test}/**/*.{scss,css,js,ts}'",
+		"bump": "bump --tag 'v%s' --all",
+		"is-git-clean": "(git diff --quiet --exit-code --cached && git diff --quiet --exit-code) || (echo Please commit or stash changes && exit 1)"
+	},
+	"keywords": [
+		"search",
+		"find",
+		"replace",
+		"regex",
+		"regexp",
+		"regular expression",
+		"sed"
+	],
+	"devDependencies": {
+		"@rollup/plugin-commonjs": "26.0.1",
+		"@rollup/plugin-node-resolve": "15.2.3",
+		"@rollup/plugin-replace": "5.0.7",
+		"@rollup/plugin-swc": "^0.3.1",
+		"@swc/core": "^1.7.11",
+		"@types/node": "20.8.3",
+		"assert": "^2.0.0",
+		"mocha": "10.7.3",
+		"prettier": "3.3.3",
+		"rollup": "2.79.1",
+		"rollup-plugin-closure-compiler-js": "^1.0.6",
+		"rollup-plugin-progress": "1.1.2",
+		"rollup-plugin-typescript3": "3.0.5",
+		"typescript": "5.5.4",
+		"version-bump-prompt": "6.1.0",
+		"yarn": "1.22.22"
+	},
+	"resolutions": {
+		"ansi-regex": "6",
+		"glob": "9",
+		"tough-cookie": "4.1.4"
+	},
+	"directories": {
+		"test": "test"
+	},
+	"dependencies": {
+		"fs-extra": "^11.1.1",
+		"globs": "0.1.4",
+		"yargs": "16.2.0"
+	},
+	"prettier": {
+		"useTabs": true,
+		"printWidth": 100,
+		"singleQuote": true,
+		"arrowParens": "always",
+		"bracketSpacing": false,
+		"trailingComma": "es5"
+	},
+	"bugs": {
+		"url": "https://github.com/mathiasrw/rexreplace/issues"
+	},
+	"homepage": "https://github.com/mathiasrw/rexreplace#readme"
 }
