--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,18 +1,15 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ],
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
-    }
-  ],
-  "automerge": true,
-  "automergeStrategy": "squash",
-  "dependencyDashboard": true, 
-  "schedule": ["every weekend"],
-  "ignorePaths": ["legacy/**"]
-
+	$schema: 'https://docs.renovatebot.com/renovate-schema.json',
+	extends: ['config:base'],
+	packageRules: [
+		{
+			matchUpdateTypes: ['minor', 'patch', 'pin', 'digest'],
+			automerge: true,
+		},
+	],
+	automerge: true,
+	automergeStrategy: 'squash',
+	dependencyDashboard: true,
+	schedule: ['every weekend'],
+	ignorePaths: ['legacy/**'],
 }
