--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,8 +20,14 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: npx yarn install
-            - run: npx yarn test-format
-            - run: npm uninstall -g rexreplace && npm -g install ./ && (which rexreplace || exit 0)
-            - run: npx yarn test-cli
-            - run: npx yarn test
+            - run: npm ci
+            - run: npm run test-format
+            - name: Install and setup rexreplace globally
+              run: |
+                  npm install -g ./
+                  echo "$(npm bin -g)" >> $GITHUB_PATH
+                  npx rexreplace --version || echo "rexreplace not accessible via npx"
+                  rexreplace --version || echo "rexreplace not accessible directly"
+            - name: Run CLI tests
+              run: npm run test-cli
+            - run: npm test
