--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,7 +12,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [18.x, 20.x, 22.x, latest]
+                node-version: [18.x, 20.x, 22.x, node]
 
         steps:
             - uses: actions/checkout@v2
