--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
             - run: npx yarn install
-            - run: npm run build-only
+            - run: npm run build
             - run: npm install --location=global .
             - run: rexreplace --version
             - run: npm run test-format
