--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
 		"test-cli": "npm uninstall --location=global rexreplace && npm --location=global install ./ && yarn test-cli-only # why on earth are they depricating the -g flag",
 		"test-cli-only": "bash test/cli/run.sh",
+		"test-ci": "yarn test-format && yarn test && yarn test-minify",
 		"test-speed": "bash test/speed/run.sh",
 		"rebase": "yarn is-git-clean && git fetch && git rebase origin/main",
 		"load-options": "# rr -h | rr 'Options:(.+)Examples:' _ -ms | rr '\\n {26,}|\\n\\n *' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----).+?(## Good to know)' '€1 + nl + pipe + nl + nl + €2' readme.md -jsT",
