--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
 	"name": "rexreplace",
-	"version": "7.1.4",
-	"description": "Smooth search & replace across files from the CLI | 🔎 🔃 📄",
+	"version": "7.1.10",
+	"description": "Search & replace across files with a CLI tool that makes you trust what you are doing.",
 	"author": "Mathias Rangel Wulff",
 	"license": "MIT",
-	"main": "src/engine.js",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/mathiasrw/rexreplace.git"
 	},
+	"bugs": {
+		"url": "https://github.com/mathiasrw/rexreplace/issues"
+	},
+	"homepage": "https://github.com/mathiasrw/rexreplace#readme",
 	"bin": {
-		"rr": "bin/rexreplace.cli.js",
+		"rr": "bin/rexreplace.cli.min.js",
 		"rexreplace": "bin/rexreplace.cli.js"
 	},
+	"main": "src/engine.js",
 	"scripts": {
 		"test": "yarn build && yarn test-cli && yarn test-js",
 		"postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
 		"version": "yarn build-minify",
-		"build": "yarn build-only",
-		"build-only": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
+		"build": "rollup -c --bundleConfigAsCjs",
 		"build-minify": "yarn build && yarn minify",
-		"minify": "# echo '#!/usr/bin/env node' > bin/rexreplace.cli.min.js && npx google-closure-compiler --js=bin/rexreplace.cli.js >> bin/rexreplace.cli.min.js",
+		"minify": "cat bin/rexreplace.cli.js > bin/rexreplace.cli.min.js",
 		"prebuild": "rm -fr bin && yarn format",
 		"test-js": "echo todo: async mocha",
 		"test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
-		"test-cli": "npm uninstall -g rexreplace && npm -g install ./ && yarn test-cli-only",
+		"test-cli": "npm uninstall --location=global rexreplace && npm --location=global install ./ && yarn test-cli-only # why on earth are they depricating the -g flag",
 		"test-cli-only": "bash test/cli/run.sh",
+		"test-ci": "yarn test-format && yarn test && yarn test-minify",
 		"test-speed": "bash test/speed/run.sh",
-		"prepublishOnly": "yarn is-git-clean && git fetch && git rebase origin/main && yarn test-minify && yarn load-options && yarn bump",
-		"postpublish": "git push --tag && git push && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
-		"load-options": "rr -h | rr 'Options:(.+)Examples:' _ -ms | rr '\\n {26,}|\\n\\n *' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----).+?(## Good to know)' '€1 + nl + pipe + nl + nl + €2' readme.md -jsT",
-		"test-format": "yarn prettier --list-different || (echo 'Please correct file formatting using `yarn format` and try again.' && exit 1)",
-		"format": "yarn prettier --write",
-		"prettier": "prettier '{src,test}/**/*.{scss,css,js,ts}'",
-		"bump": "# bump --tag 'v%s' --all",
-		"is-git-clean": "(git diff --quiet --exit-code --cached && git diff --quiet --exit-code) || (echo Please commit or stash changes && exit 1)"
+		"rebase": "yarn is-git-clean && git fetch && git rebase origin/main",
+		"load-options": "# rr -h | rr 'Options:(.+)Examples:' _ -ms | rr '\\n {26,}|\\n\\n *' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----).+?(## Good to know)' '€1 + nl + pipe + nl + nl + €2' readme.md -jsT",
+		"test-format": "prettier . --list-different || (echo 'Please correct file formatting using `yarn format` and try again.' && exit 1)",
+		"format": "prettier . --write",
+		"is-git-clean": "(git diff --quiet --exit-code --cached && git diff --quiet --exit-code) || (echo Please commit or stash changes && exit 1)",
+		"release": "yarn version",
+		"prerelease": "yarn is-git-clean && yarn test && yarn test-minify && yarn load-options",
+		"postrelease": "npm publish && git push && git push --tags && echo \"Successfully released version $npm_package_version\" && (open https://github.com/mathiasrw/rexreplace/releases || 1)"
 	},
 	"keywords": [
 		"search",
@@ -46,46 +50,24 @@
 		"sed"
 	],
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "26.0.1",
-		"@rollup/plugin-node-resolve": "15.2.3",
-		"@rollup/plugin-replace": "5.0.7",
+		"@rollup/plugin-replace": "5",
 		"@rollup/plugin-swc": "^0.3.1",
 		"@swc/core": "^1.7.11",
-		"@types/node": "20.8.3",
+		"@types/node": "22.3.0",
 		"assert": "^2.0.0",
 		"mocha": "10.7.3",
 		"prettier": "3.3.3",
-		"rollup": "2.79.1",
-		"rollup-plugin-closure-compiler-js": "^1.0.6",
-		"rollup-plugin-progress": "1.1.2",
-		"rollup-plugin-typescript3": "3.0.5",
-		"typescript": "5.5.4",
-		"version-bump-prompt": "6.1.0",
-		"yarn": "1.22.22"
+		"rollup": "4",
+		"yarn": "1.22.19"
 	},
 	"resolutions": {
-		"ansi-regex": "6",
-		"glob": "9",
-		"tough-cookie": "4.1.4"
+		"glob": "9"
 	},
 	"directories": {
 		"test": "test"
 	},
 	"dependencies": {
-		"fs-extra": "^11.1.1",
 		"globs": "0.1.4",
-		"yargs": "16.2.0"
-	},
-	"prettier": {
-		"useTabs": true,
-		"printWidth": 100,
-		"singleQuote": true,
-		"arrowParens": "always",
-		"bracketSpacing": false,
-		"trailingComma": "es5"
-	},
-	"bugs": {
-		"url": "https://github.com/mathiasrw/rexreplace/issues"
-	},
-	"homepage": "https://github.com/mathiasrw/rexreplace#readme"
+		"yargs": "16"
+	}
 }
