Multi env. testing

--- a/package.json
+++ b/package.json
@@ -18,26 +18,28 @@
 	},
 	"main": "src/engine.js",
 	"scripts": {
-		"test": "yarn build && yarn test-cli && yarn test-js",
+		"test": "bun test --bail",
+		"test-this": "cmdmix 'RR_TARGET=%1 RR_TYPE=%2 bun test --bail'",
+		"test-run": "cmdmix 'RR_TARGET=%1 bun test'",
+		"test-all": "yarn test-run-all && yarn build && yarn use-bundle test-run-all",
+		"test-run-all": "yarn test-run bun && yarn test-run node && yarn test-run deno",
+		"test-cli": "sh test/sh/run.sh",
+		"test-speed": "bash test/speed/run.sh",
+		"test-format": "prettier . --list-different || (echo 'Please correct file formatting using `yarn format` and try again.' && exit 1)",
+		"test-ci": "yarn test-format && yarn test-all && yarn test-cli",
+		"use-bundle": "RR_TYPE=bundle yarn",
 		"postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
 		"version": "yarn build-minify",
 		"build": "rollup -c --bundleConfigAsCjs",
 		"build-minify": "yarn build && yarn minify",
 		"minify": "cat bin/rexreplace.cli.js > bin/rexreplace.cli.min.js",
 		"prebuild": "rm -fr bin && yarn format",
-		"test-js": "echo todo: async mocha",
-		"test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
-		"test-cli": "npm uninstall --location=global rexreplace && npm --location=global install ./ && yarn test-cli-only # why on earth are they depricating the -g flag",
-		"test-cli-only": "bash test/cli/run.sh",
-		"test-ci": "yarn test-format && yarn test && yarn test-minify",
-		"test-speed": "bash test/speed/run.sh",
 		"rebase": "yarn is-git-clean && git fetch && git rebase origin/main",
 		"load-options": "# rr -h | rr 'Options:(.+)Examples:' _ -ms | rr '\\n {26,}|\\n\\n *' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----).+?(## Good to know)' '€1 + nl + pipe + nl + nl + €2' readme.md -jsT",
-		"test-format": "prettier . --list-different || (echo 'Please correct file formatting using `yarn format` and try again.' && exit 1)",
 		"format": "prettier . --write",
 		"is-git-clean": "(git diff --quiet --exit-code --cached && git diff --quiet --exit-code) || (echo Please commit or stash changes && exit 1)",
 		"release": "yarn version",
-		"prerelease": "yarn is-git-clean && yarn test && yarn test-minify && yarn load-options",
+		"prerelease": "yarn is-git-clean && yarn test-ci && yarn test-minify && yarn load-options",
 		"postrelease": "npm publish && git push && git push --tags && echo \"Successfully released version $npm_package_version\" && (open https://github.com/mathiasrw/rexreplace/releases || 1)"
 	},
 	"keywords": [
@@ -55,11 +57,13 @@
 		"@swc/core": "^1.7.11",
 		"@types/node": "22.3.0",
 		"assert": "^2.0.0",
+		"cmdmix": "^2.2.2",
 		"mocha": "10.7.3",
 		"prettier": "3.3.3",
 		"rollup": "4",
 		"yarn": "1.22.19"
 	},
+	"peerDependencies": {},
 	"resolutions": {
 		"glob": "9"
 	},
