--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
-printWidth: 100
-tabWidth: 4
-useTabs: true
-bracketSpacing: false
-trailingComma: es5
-singleQuote: true
+{
+	"printWidth": 100,
+	"tabWidth": 4,
+	"useTabs": true,
+	"bracketSpacing": false,
+	"trailingComma": "es5",
+	"singleQuote": true,
+	"arrowParens": "avoid"
+}
