--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,15 +1,22 @@
 {
-	$schema: 'https://docs.renovatebot.com/renovate-schema.json',
-	extends: ['config:base'],
-	packageRules: [
-		{
-			matchUpdateTypes: ['minor', 'patch', 'pin', 'digest'],
-			automerge: true,
-		},
-	],
-	automerge: true,
-	automergeStrategy: 'squash',
-	dependencyDashboard: true,
-	schedule: ['every weekend'],
-	ignorePaths: ['legacy/**'],
+  $schema: 'https://docs.renovatebot.com/renovate-schema.json',
+  extends: ['config:base'],
+  packageRules: [
+    {
+      // Rule for security patches (patch updates)
+      matchUpdateTypes: ['patch'],
+      automerge: true,
+      schedule: ['on the first day of the month'], // Monthly for patches
+    },
+    {
+      // Rule for other updates (minor, pin, digest)
+      matchUpdateTypes: ['minor', 'pin', 'digest'],
+      automerge: true,
+      schedule: ['on the first day of the month every 3rd month'], // Quarterly for others
+    },
+  ],
+  automerge: true,
+  automergeStrategy: 'squash',
+  dependencyDashboard: true,
+  ignorePaths: ['legacy/**/*'],
 }
