--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
 	"devDependencies": {
 		"@rollup/plugin-replace": "6.0.3",
 		"@rollup/plugin-swc": "^0.4.0",
-		"@swc/core": "1.13.5",
-		"@types/node": "24.9.2",
+		"@swc/core": "1.15.2",
+		"@types/node": "24.10.1",
 		"assert": "^2.0.0",
-		"mocha": "11.7.4",
+		"mocha": "11.7.5",
 		"prettier": "3.6.2",
-		"rollup": "4.52.5",
+		"rollup": "4.53.3",
 		"yarn": "1.22.22"
 	},
 	"resolutions": {
@@ -67,7 +67,7 @@
 		"test": "test"
 	},
 	"dependencies": {
-		"globs": "0.1.4",
+		"fast-glob": "^3.3.3",
 		"yargs": "16"
 	}
 }
